[package]
name = "tv-renderer"
version = "0.1.5"
authors = ["tylervipond"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.5.1", features = ["derive"] }
futures = "0.3.14"
raw-window-handle = "0.3.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "0.8.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.8.0", default-features = false, features = ["webgl"] }

[build-dependencies]
anyhow = "1.0.40"
fs_extra = "1.2.0"
glob = "0.3.0"
shaderc = "0.7.2"
